# haskell-quoter

./: .project-settings.yml  LICENSE  haskell-quoter.cabal  quasimodo.cabal  readme.md
examples/: Idiom.hs
src/Language/Haskell/Exts/: Quoter.hs
src/Language/Haskell/Quoter/: HSE.hs  Internal.hs
src/Quasimodo/: HSE.hs
src/Quoter/: Haskell.hs  Parser.hs  Substitute.hs
