name:              Quasimodo
version:           0.0.0
synopsis:          Powerful quoting and pattern matching for TH and HSE ASTs
license:           BSD3
license-file:      LICENSE
author:            Michael Sloan
maintainer:        Michael Sloan <mgsloan at gmail>
homepage:          http://github.com/mgsloan/quasimodo
bug-reports:       http://github.com/mgsloan/quasimodo/issues
category:          Template Haskell
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
source-repository head
  type: git
  location: git://github.com/mgsloan/quasimodo

library
    hs-source-dirs: src
    ghc-options: -Wall
    exposed-modules: Quasimodo.HSE

    build-depends: base
                 , containers
                 , either
                 , haskell-src-exts
                 , haskell-src-meta
                 , parsec
                 , syb
                 , template-haskell
                 , themplates
                 , th-lift
                 , transformers
